# TACOS

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
crn_bounds/: __init__.py  affinity.py  api.py  concentration_bounds.py  conservation.py  efm.py  ldb.py  model.py  paths.py  probes.py  self_assembly.py  split.py  stoichiometry.py  thermo_space.py  thermodynamics.py  utils.py
demos/: README.md  demo_01_self_assembly.py  demo_02_schlogl.py  demo_03_chiral.py  demo_04_efm_methods.py  tutorial.ipynb
docs/: EFM_ALGORITHMS.md
notes/: README.md
scripts/: benchmark_efm_enumeration.py  generate_all_figures.py  plot_affinity_bounds_validation.py  plot_bounds_validation.py  plot_chiral_bounds.py  plot_probe_ratio_band.py  plot_schlogl_bounds.py  plot_self_assembly_A.py  plot_self_assembly_from_efm.py  plot_self_assembly_probe_bound_from_efm.py  plot_thermo_space_A.py  sample_self_assembly_relaxation.py  sample_self_assembly_relaxation_panels.py  sample_self_assembly_steady_states.py
tests/: test_affinity.py  test_api_frank_probe.py  test_api_schlogl.py  test_api_self_assembly.py  test_api_self_assembly_conc.py  test_api_self_assembly_probes.py  test_concentration_bounds_general.py  test_conservation_and_probe.py  test_efm.py  test_self_assembly_probe_efm.py  test_split.py  test_thermodynamics.py
